added category color

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -206,6 +206,7 @@
       },
       "categoryIconTitle": "Category icon",
       "categoryNameTitle": "Category name",
+      "categoryColorTitle": "Category color",
       "cancel": "Cancel",
       "addCategory": "Add category",
       "categoryExistsError": "Such category already exists",
