--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -292,7 +292,8 @@
     "minValue": "Мінімальне значення - {{ minValue }}",
     "maxValue": "Максимальне значення - {{ maxValue }}",
     "noteTooLong": "Примітка занадто велика, макс. довжина - 100",
-    "editError": "Значення після редагування має бути іншим"
+    "editError": "Значення після редагування має бути іншим",
+    "invalidColor": "Колір введено невірно"
   },
 
   "confirmationModal": {
