--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -293,7 +293,8 @@
     "maxValue": "Максимальне значення - {{ maxValue }}",
     "noteTooLong": "Примітка занадто велика, макс. довжина - 100",
     "editError": "Значення після редагування має бути іншим",
-    "invalidColor": "Колір введено невірно"
+    "invalidColor": "Колір введено невірно",
+    "numberPattern": "Введене значення повинне бути цілим числом"
   },
 
   "confirmationModal": {
