--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -45,10 +45,13 @@
 
     "addAccountModal": {
       "title": "Додати рахунок",
-      "accountIconTitle": "Значок рахунку",
       "accountNameTitle": "Назва рахунку",
+      "accountValueTitle": "Значення рахунку",
+      "accountIconTitle": "Значок рахунку",
       "accountBgColorTitle": "Фон",
       "accountTextColorTitle": "Колір тексту",
+      "accountCurrencyTitle": "Валюта рахунку",
+      "addAccount": "Додати рахунок",
       "accountExistsError": "Такий рахунок вже існує",
       "accountNameLengthError": "Макс. довжина імені рахунку - 20"
     },
@@ -66,6 +69,13 @@
 
     "activityLog": {
       "title": "Журнал активності",
+
+      "accountManagementRecord": {
+        "accountAdded": "Рахунок <b>{{ accountName }}</b> було додано",
+        "accountRemoved": {
+          "budgetType": "Рахунок <b>{{ accountName }}</b> було видалено"
+        }
+      },
 
       "categoryManagementRecord": {
         "categoryAdded": {
@@ -244,6 +254,10 @@
     },
     "accountValueEdited": {
       "message": "Значення рахунку було змінено успішно!",
+      "buttonText": "Добре"
+    },
+    "accountAddedSnackbar": {
+      "message": "Рахунок було додано успішно!",
       "buttonText": "Добре"
     }
   },
