--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -180,7 +180,7 @@
       "add": "Add",
       "valueToAddTitle": "Value to add",
       "noteTitle": "Note",
-      "accountsTitle": "Account to use:"
+      "accountsTitle": "Account to use"
     }
   },
 
