--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -182,7 +182,7 @@
       "add": "Додати",
       "valueToAddTitle": "Значення",
       "noteTitle": "Примітка",
-      "accountsTitle": "Використати рахунок:"
+      "accountsTitle": "Використати рахунок"
     }
   },
 
