--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -12,15 +12,9 @@
     "pageTitle": "Дошка",
 
     "infoCards": {
-      "income": {
-        "title": "Дохід"
-      },
-      "expense": {
-        "title": "Витрати"
-      },
-      "currentMonthBalance": {
-        "title": "Баланс за місяць"
-      },
+      "income": "Дохід",
+      "expense": "Витрати",
+      "currentMonthBalance": "Баланс за місяць",
       "fullBalance": {
         "title": "Повний баланс",
         "tooltip": "Full balance is the sum of all your accounts"
@@ -93,7 +87,6 @@
 
       "categoryValueChangeRecord": {
         "removeConfirmationQuestion": "Ви хочете видалити цей запис?",
-        "removeConfirmationCheckboxText": "Також відмінити зміни, зроблені цим записом",
         "removeConfirmationRemark": "Ця дія відмінить зроблені цим записом зміни і вплине на рахунок <span class='font-bold'>{{ accountName }}</span> і категорію <span class='font-bold'>{{ categoryName }}</span>"
       },
 
@@ -127,19 +120,15 @@
     "categories": {
       "income": {
         "title": "Дохід",
-        "resetConfirmationQuestion": "Ви хочете скинути всі категорії <b>доходів</b>?",
-        "menu": {
-          "addCategory": "Додати категорію",
-          "resetCategories": "Скинути категорії"
-        }
+        "resetConfirmationQuestion": "Ви хочете скинути всі категорії <b>доходів</b>?"
       },
       "expense": {
         "title": "Витрати",
-        "resetConfirmationQuestion": "Ви хочете скинути всі категорії <b>витрат</b>?",
-        "menu": {
-          "addCategory": "Додати категорію",
-          "resetCategories": "Скинути категорії"
-        }
+        "resetConfirmationQuestion": "Ви хочете скинути всі категорії <b>витрат</b>?"
+      },
+      "menu": {
+        "addCategory": "Додати категорію",
+        "resetCategories": "Скинути категорії"
       },
       "emptyStateText": "Немає данних для відображення",
 
@@ -174,6 +163,7 @@
       "categoryExistsError": "Така категорія вже існує",
       "categoryNameLengthError": "Макс. довжина імені категорії - 25"
     },
+
     "categoryValueModal": {
       "subtitle": "Додати значення до категорії",
       "cancel": "Вихід",
@@ -200,64 +190,24 @@
   },
 
   "snackbars": {
-    "errorSnackbar": {
-      "message": "Щось пішло не так! Будь ласка, спробуйте ще.",
-      "buttonText": "Добре"
-    },
-    "balanceEditedSnackbar": {
-      "message": "Баланс оновлено успішно!",
-      "buttonText": "Добре"
-    },
-    "savingsEditedSnackbar": {
-      "message": "Збереження оновлено успішно!",
-      "buttonText": "Добре"
-    },
-    "freeMoneyEditedSnackbar": {
-      "message": "Вільні гроші оновлено успішно!",
-      "buttonText": "Добре"
-    },
-    "categoryAddedSnackbar": {
-      "message": "Категорію було додано успішно!",
-      "buttonText": "Добре"
-    },
-    "categoryRemovedSnackbar": {
-      "message": "Категорію було видалено успішно!",
-      "buttonText": "Добре"
-    },
-    "activityLogRecordRemoved": {
-      "message": "Запис журналу активності було видалено успішно!",
-      "buttonText": "Добре"
-    },
-    "bulkActivityLogRecordsRemoved": {
-      "allRecordsRemoved": "Всі записи журналу активності було видалено успішно!",
-      "recordsByTypesRemoved": "Записи журналу активності обраних типів було видалено успішно!",
-      "buttonText": "Добре"
-    },
-    "categoryValueChangedSnackbar": {
-      "message": "Значення категорії було змінено успішно!",
-      "buttonText": "Добре"
-    },
+    "defaultOkButtonText": "Добре",
+    "errorSnackbar": "Щось пішло не так! Будь ласка, спробуйте ще.",
+    "balanceEditedSnackbar": "Баланс оновлено успішно!",
+    "savingsEditedSnackbar": "Збереження оновлено успішно!",
+    "freeMoneyEditedSnackbar": "Вільні гроші оновлено успішно!",
+    "categoryAddedSnackbar": "Категорію було додано успішно!",
+    "categoryRemovedSnackbar": "Категорію було видалено успішно!",
+    "activityLogRecordRemoved": "Запис журналу активності було видалено успішно!",
+    "bulkActivityLogRecordsRemoved": "Записи журналу активності обраних типів було видалено успішно!",
+    "categoryValueChangedSnackbar": "Значення категорії було змінено успішно!",
     "categoriesResetSnackbar": {
       "income": "Категорії доходів було скинуто успішно!",
-      "expense": "Категорії витрат було скинуто успішно!",
-      "buttonText": "Добре"
+      "expense": "Категорії витрат було скинуто успішно!"
     },
-    "dataResetSnackbar": {
-      "message": "Категорії було скинуто!",
-      "buttonText": "Добре"
-    },
-    "accountValueEdited": {
-      "message": "Значення рахунку було змінено успішно!",
-      "buttonText": "Добре"
-    },
-    "accountAddedSnackbar": {
-      "message": "Рахунок було додано успішно!",
-      "buttonText": "Добре"
-    },
-    "accountRemovedSnackbar": {
-      "message": "Рахунок було видалено успішно!",
-      "buttonText": "Добре"
-    }
+    "dataResetSnackbar": "Категорії було скинуто!",
+    "accountValueEdited": "Значення рахунку було змінено успішно!",
+    "accountAddedSnackbar": "Рахунок було додано успішно!",
+    "accountRemovedSnackbar": "Рахунок було видалено успішно!"
   },
 
   "formErrors": {
