store refactoring, design fixes

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -54,7 +54,8 @@
     },
 
     "accountsListModal": {
-      "title": "Accounts ({{ accountsAmount }})"
+      "title": "Accounts ({{ accountsAmount }})",
+      "closeButton": "Close"
     },
 
     "activityLog": {
