implemented custom form controls

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -49,7 +49,8 @@
     "accountValueEditModal": {
       "subtitle": "Edit account value",
       "cancel": "Cancel",
-      "noteInputTitle": "Note",
+      "valueInputLabel": "Value",
+      "noteInputLabel": "Note",
       "editButton": "Edit"
     },
 
@@ -214,11 +215,10 @@
 
   "formErrors": {
     "required": "Field is required",
-    "minValue": "Minimal value is {{ minValue }}",
-    "noteTooLong": "Note is too long, max length is 100",
-    "editError": "Value must be different after edit",
-    "invalidColor": "The color is invalid",
-    "numberPattern": "Input should be integer"
+    "minValue": "Minimal value - {{ minValue }}",
+    "maxLength": "Max length - {{ maxLength }}",
+    "sameValue": "Value must be different after edit",
+    "entityExists": "Entity with such name already exists"
   },
 
   "confirmationModal": {
