--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -49,7 +49,8 @@
     "accountValueEditModal": {
       "subtitle": "Редагування значення рахунку",
       "cancel": "Вихід",
-      "noteInputTitle": "Примітка",
+      "valueInputLabel": "Значення",
+      "noteInputLabel": "Примітка",
       "editButton": "Редагувати"
     },
 
@@ -215,10 +216,9 @@
   "formErrors": {
     "required": "Обов'язкове для заповнення",
     "minValue": "Мінімальне значення - {{ minValue }}",
-    "noteTooLong": "Примітка занадто велика, макс. довжина - 100",
-    "editError": "Значення після редагування має бути іншим",
-    "invalidColor": "Колір введено невірно",
-    "numberPattern": "Введене значення повинне бути цілим числом"
+    "maxLength": "Макс. довжина - 100",
+    "sameValue": "Значення після редагування має бути іншим",
+    "entityExists": "Ця назва вже використовується"
   },
 
   "confirmationModal": {
