--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -114,6 +114,14 @@
           "text": "Зміна значень категорій",
           "tooltip": "Зміна значень категорій розходів та доходів"
         },
+        "accountManagement": {
+          "text": "Менеджмент рахунків",
+          "tooltip": "Додавання та видалення рахунків"
+        },
+        "accountValueEdit": {
+          "text": "Зміна значень рахунків",
+          "tooltip": "Зміна значень рахунків"
+        },
         "removeConfirmationQuestion": "Ви хочете видалити записи обраних типів?",
         "removeConfirmationRemark": "Ця дія не вплине на записи поточного місяця"
       }
