--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -174,6 +174,7 @@
       "cancel": "Cancel",
       "add": "Add",
       "valueToAddTitle": "Value to add",
+      "convertedValueToAddTitle": "Converted value",
       "noteTitle": "Note",
       "accountsTitle": "Account to use"
     }
@@ -241,7 +242,9 @@
   },
 
   "currencySwitcher": {
-    "tooltip": "Currency"
+    "tooltip": "Currency",
+    "removeConfirmationQuestion": "Are you sure you want to switch the currency?",
+    "removeConfirmationRemark": "This action also will reset categories values and remove activity log records to prevent inconsistency"
   },
 
   "currencies": {
