--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -107,26 +107,12 @@
 
       "removeMenu": {
         "allTypes": "All types",
-        "categoryManagement": {
-          "text": "Category management",
-          "tooltip": "Adding and removing categories"
-        },
-        "categoriesReset": {
-          "text": "Categories reset",
-          "tooltip": "Manual and monthly categories reset"
-        },
-        "categoryValueChange": {
-          "text": "Category value change",
-          "tooltip": "Income and expense categories value changing"
-        },
-        "accountManagement": {
-          "text": "Account management",
-          "tooltip": "Adding and removing accounts"
-        },
-        "accountValueEdit": {
-          "text": "Account value edit",
-          "tooltip": "Account value changing"
-        },
+        "categoryManagement": "Category management",
+        "categoriesReset": "Categories reset",
+        "categoryValueChange": "Category value change",
+        "accountManagement": "Account management",
+        "accountValueEdit": "Account value edit",
+        "moveMoneyBetweenAccounts": "Move money between accounts",
         "removeConfirmationQuestion": "Are you sure you want to remove records of selected types?",
         "removeConfirmationRemark": "This action won't affect current month records"
       }
