--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -107,30 +107,12 @@
 
       "removeMenu": {
         "allTypes": "Всі типи",
-        "categoryManagement": {
-          "text": "Менеджмент категорій",
-          "tooltip": "Додавання та видалення категорій"
-        },
-        "categoriesReset": {
-          "text": "Скидання категорій",
-          "tooltip": "Ручне та щомісячне скидання категорій"
-        },
-        "rootValueChange": {
-          "text": "Зміна основних значень",
-          "tooltip": "Зміна значень балансу, збережень та вільних грошей"
-        },
-        "categoryValueChange": {
-          "text": "Зміна значень категорій",
-          "tooltip": "Зміна значень категорій розходів та доходів"
-        },
-        "accountManagement": {
-          "text": "Менеджмент рахунків",
-          "tooltip": "Додавання та видалення рахунків"
-        },
-        "accountValueEdit": {
-          "text": "Зміна значень рахунків",
-          "tooltip": "Зміна значень рахунків"
-        },
+        "categoryManagement": "Менеджмент категорій",
+        "categoriesReset": "Скидання категорій",
+        "categoryValueChange": "Зміна значень категорій",
+        "accountManagement": "Менеджмент рахунків",
+        "accountValueEdit": "Зміна значень рахунків",
+        "moveMoneyBetweenAccounts": "Переміщення грошей між рахунками",
         "removeConfirmationQuestion": "Ви хочете видалити записи обраних типів?",
         "removeConfirmationRemark": "Ця дія не вплине на записи поточного місяця"
       }
