--- a/src/assets/i18n/uk-UA.json
+++ b/src/assets/i18n/uk-UA.json
@@ -217,6 +217,7 @@
   "formErrors": {
     "required": "Обов'язкове для заповнення",
     "minValue": "Мінімальне значення - {{ minValue }}",
+    "maxValue": "Максимальне значення - {{ maxValue }}",
     "maxLength": "Макс. довжина - 100",
     "sameValue": "Значення після редагування має бути іншим",
     "entityExists": "Ця назва вже використовується"
